# dreamland_code

./: .drone.yml  .gitbook.yaml  .gitignore  .gitpod.yml  .travis.yml  AUTHORS  Dockerfile.gitpod  Dockerfile.localbuild  Dockerfile.localrun  INSTALL  Makefile.am  Makefile.git  README  README.en.md  README.md  configure.ac  sonar-project.properties
plug-ins/: Makefile.am  Makefile.inc
plug-ins/admin/: Makefile.am  adminservlet.cpp  cbackup.cpp  cban.cpp  cban.h  confirm.cpp  confirm.h  cplugin.cpp  cplugin.h  cprofile.cpp  crecover.cpp  cundelete.cpp  deny.cpp  deny.h  finger.cpp  forceservlet.cpp  idelete.cpp  impl.cpp  lasthost.cpp  lasthost.h  nochannel.cpp  nochannel.h  nopost.cpp  nopost.h  reboot.cpp  reward.cpp  reward.h  socket.cpp
plug-ins/ai/: Makefile.am  aggression.cpp  assist.cpp  basicmobilebehavior.cpp  basicmobilebehavior.h  caster.cpp  cleric.cpp  fight.cpp  impl.cpp  items.cpp  mage.cpp  necromancer.cpp  ranger.cpp  specials.cpp  tracking.cpp  vampire.cpp
plug-ins/alignment/: Makefile.am  align_gain.h  alignment.cpp  alignment.h  impl.cpp
plug-ins/anatolia/: Makefile.am  act_comm.cpp  act_hera.cpp  act_info.cpp  act_lock.cpp  act_lock.h  act_look.cpp  act_move.cpp  act_move.h  act_obj.cpp  act_wiz.cpp  act_wiz.h  automap.cpp  gsn_plugin.h  handler.cpp  handler.h  impl.cpp  set.cpp  today.cpp  today.h
plug-ins/areas/: Makefile.am  areahelp.cpp  areahelp.h  areautils.cpp  areautils.h  db2.cpp  fixarea.cpp  load_c7i.cpp  load_compat.cpp  load_xml.cpp  xmlarea.cpp  xmlarea.h  xmlareahelp.cpp  xmlareahelp.h  xmlitemtype.cpp  xmlitemtype.h  xmlmisc.cpp  xmlmisc.h  xmlmobilefactory.cpp  xmlmobilefactory.h  xmlobjectfactory.cpp  xmlobjectfactory.h  xmlroom.cpp  xmlroom.h
plug-ins/ban/: Makefile.am  ban.cpp  ban.h  banflags.conf  impl.cpp
plug-ins/bonus/: Makefile.am  defaultbonus.cpp  defaultbonus.h  impl.cpp
plug-ins/cards/: Makefile.am  cardskill.cpp  cardskill.h  cardskillloader.cpp  cardskillloader.h  ccard.cpp  ccard.h  impl.cpp  mobiles.cpp  mobiles.h  objects.cpp  objects.h  skills.cpp  todo  xmlattributecards.cpp  xmlattributecards.h
plug-ins/clan/: Makefile.am
plug-ins/comm/: Makefile.am  account.cpp  affects.cpp  alias.cpp  areas.cpp  auction.cpp  banking.cpp  banking.h  bodyposition.cpp  bugs.cpp  close.cpp  communication.cpp  compare.cpp  configs.cpp  configs.h  corder.cpp  corder.h  cwizlist.cpp  cwizlist.h  demand.cpp  description.cpp  drop.cpp  eating.cpp  eating.h  equipment.cpp  examine.cpp  exits.cpp  fly.cpp  following.cpp  get.cpp  give.cpp  groupchannel.cpp  groupchannel.h  help.cpp  helpservlet.cpp  impl.cpp  info.cpp  inventory.cpp  lock.cpp  look.cpp  (+30 more)
plug-ins/command/: Makefile.am  admincommand.cpp  admincommand.h  command.cpp  command.h  commandelement.cpp  commandelement.h  commandflags.conf  commandhelp.cpp  commandhelp.h  commandloader.cpp  commandloader.h  commandmanager.cpp  commandmanager.h  commandplugin.cpp  commandplugin.h  commandpluginloader.cpp  commandpluginloader.h  commandtemplate.h  defaultcommand.cpp  defaultcommand.h  impl.cpp  levenshtein.cpp  levenshtein.h  wrappedcommand.cpp  wrappedcommand.h  wrongcommand.cpp  wrongcommand.h
plug-ins/communication/: Makefile.am  areachannel.cpp  areachannel.h  channels.cpp  channels.h  channelservlet.cpp  communicationchannel.cpp  communicationchannel.h  globalchannel.cpp  globalchannel.h  impl.cpp  languages.cpp  personalchannel.cpp  personalchannel.h  racechannel.cpp  racechannel.h  replay.cpp  replay.h  roomchannel.cpp  roomchannel.h  twitlist.cpp  twitlist.h  vocalchords.cpp  vocalchords.h  worldchannel.cpp  worldchannel.h
plug-ins/craft/: Makefile.am  craft_utils.cpp  craft_utils.h  craftattribute.cpp  craftattribute.h  craftskill.cpp  craftskill.h  craftwearloc.cpp  craftwearloc.h  impl.cpp  recipeflags.conf  subprofession.cpp  subprofession.h
plug-ins/debug/: 1.S  1.c  Makefile.am  corescan.pl  funcs.gdb  hack.x  patch.c  patch.pl  saving.cpp
plug-ins/descriptor/: Makefile.am  TODO  bufferhandler.cpp  bufferhandler.h  descriptor.cpp  descriptor.h  impl.cpp  inputhandler.cpp  inputhandler.h  outofband.cpp  outofband.h  telnet.h  websocketrpc.cpp  websocketrpc.h
plug-ins/desire/: Makefile.am  defaultdesire.cpp  defaultdesire.h  desire_damages.cpp  desire_damages.h  impl.cpp  misc_desires.cpp  misc_desires.h
plug-ins/druids/: Makefile.am  TODO  class_druid.cpp  class_druid.h  druidic.cpp  druidic.h  druidic_effects.cpp  druidic_effects.h  impl.cpp
plug-ins/ed/: Makefile.am  format.cpp  format.h  impl.cpp  xmleditorinputhandler.cpp  xmleditorinputhandler.h  xmlpcstringeditor.cpp  xmlpcstringeditor.h
plug-ins/feniaroot/: Makefile.am  affecthandlerwrapper.cpp  affecthandlerwrapper.h  affectwrapper.cpp  affectwrapper.h  areaindexwrapper.cpp  areaindexwrapper.h  areaquestwrapper.cpp  areaquestwrapper.h  behaviorloader.cpp  behaviorloader.h  behaviorwrapper.cpp  behaviorwrapper.h  ccodesource.cpp  ceval.cpp  cfindref.cpp  characterwrapper.cpp  characterwrapper.h  codesourcerepo.cpp  codesourcerepo.h  commandtableloader.cpp  commandtableloader.h  commandwrapper.cpp  commandwrapper.h  dlprintf.cpp  evalservlet.cpp  feniacroaker.cpp  feniacroaker.h  feniaspellext.cpp  feniastringext.cpp  feniasync.cpp  idcontainerext.cpp  impl.cpp  mobindexwrapper.cpp  mobindexwrapper.h  multimessagewrapper.cpp  multimessagewrapper.h  nativeext.h  objectwrapper.cpp  objectwrapper.h  (+33 more)
plug-ins/fight/: Makefile.am  attacks.cpp  attacks.h  effects.cpp  effects.h  fight.cpp  fight.h  fight_cmds.cpp  fight_death.cpp  fight_exp.cpp  fight_subr.cpp  impl.cpp  magic.cpp  magic.h  onehit.cpp  onehit.h  onehit_missile.cpp  onehit_missile.h  onehit_undef.cpp  onehit_undef.h  onehit_weapon.cpp  onehit_weapon.h  skill_utils.cpp  skill_utils.h
plug-ins/fight_core/: Makefile.am  attacks.cpp  bonusflags.conf  character.cpp  damage.cpp  damage.h  damage_impl.cpp  damage_impl.h  damageflags.conf  immunity.h  (+39 more)
src/: Makefile.am  Makefile.inc  bits.conf  db.cpp  def.h  dreamland-impl.h  dreamland.cpp  dreamland.h  dreamland_code.code-workspace  main.cpp  makebits.pl  merc.h  mercdb.h  newvers.sh
(+1691 files in other folders)
