SUBDIRS = \
descriptor \
output \
system \
help \
ban \
interpret \
loadsave \
command \
alignment \
iomanager \
servlets \
ed \
profession \
race \
hometown \
bonus \
occupations \
communication \
follow \
fight_core \
movement \
wearlocation \
anatolia \
admin \
traverse \
fight \
updates \
areas \
desire \
social \
ai \
services \
remort \
questreward \
skills_impl \
liquid \
comm \
clan \
selfrate \
gquest \
languages \
druids \
religion \
quest \
craft \
feniaroot \
groups \
learn \
magic \
mansion \
mlove \
note \
misc_behaviors \
race_aptitude \
other_skills \
cards \
riding \
web \
gmcp \
olc \
searcher

