SUBDIRS = \
descriptor \
output \
system \
help \
interpret \
loadsave \
command \
iomanager \
servlets \
ed \
profession \
race \
hometown \
bonus \
occupations \
communication \
fight_core \
movement \
wearlocation \
anatolia \
admin \
traverse \
fight \
updates \
areas \
desire \
social \
ai \
services \
remort \
questreward \
skills_impl \
liquid \
comm \
clan \
selfrate \
gquest \
languages \
religion \
quest \
craft \
feniaroot \
groups \
learn \
mansion \
mlove \
note \
misc_behaviors \
race_aptitude \
other_skills \
cards \
web \
gmcp \
olc \
searcher \
skills_loader

